primeren hotel gallery

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,7 @@
             <h1 id = "title">Saitche</h1>
             <ul class="nav">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="display.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="#">Service</a></li>
                 <a href="signup.html"><i class="fa-solid fa-user"></i></a>
@@ -25,7 +25,6 @@
         </nav>
     </header>
     <div class = "text-box">
-        <h1></h1>
     </div>
 </body>
 </html>
