--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -55,7 +55,7 @@
                         <span>Confirm password</span>
                     </div>
                     <div class="inputBox">
-                        <input type="date"  required></input>
+                        <input type="date"  required>
                     </div>
                     <div class="inputBox">
                         <input type="submit" value="Sign up">
