--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,14 +17,21 @@
             <h1 id = "title">Saitche</h1>
             <ul class="nav">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="display.html">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="#">Service</a></li>
                 <a href="signup.html"><i class="fa-solid fa-user"></i></a>
+                
             </ul>
         </nav>
     </header>
     <div class = "text-box">
+        <h1></h1>
+        
+    </div>
+    <div id="Info">
+        <h1 id="Info">Begin your vacation easy and managable.</h1>
+        <p id="Obesnenie">,,Saitche" подпомага хората,като организира лесно ваканции и събирания със семейство, приятели, колеги.</p>
     </div>
 </body>
 </html>
