--- a/frontend/display.html
+++ b/frontend/display.html
@@ -29,23 +29,23 @@
         <div class="hotel-container">
             <div class="hotel-card">
                 <img src="images/hotel1.jpg" alt="Hotel 1">
-                <h3>Grand Palace Hotel</h3>
-                <p>⭐⭐⭐⭐⭐</p>
-                <p>Luxury stay with an amazing view.</p>
+                <h3 id="hotelname1">Hotel name 1</h3>
+                <p id="rating1">Rating: </p>
+                <p>Closest to you.</p>
                 <button>Book Now</button>
             </div>
             <div class="hotel-card">
                 <img src="images/hotel2.jpg" alt="Hotel 2">
-                <h3>Sea Breeze Resort</h3>
-                <p>⭐⭐⭐⭐</p>
-                <p>Perfect for a relaxing getaway by the sea.</p>
+                <h3 id="hotelname2">Hotel name 2</h3>
+                <p id="rating2">Rating: </p>
+                <p>Cheapest.</p>
                 <button>Book Now</button>
             </div>
             <div class="hotel-card">
                 <img src="images/hotel3.jpg" alt="Hotel 3">
-                <h3>Mountain Escape Lodge</h3>
-                <p>⭐⭐⭐⭐</p>
-                <p>A cozy retreat in the heart of nature.</p>
+                <h3 id="hotelname3">Hotel name 3</h3>
+                <p id="rating3">Rating: </p>
+                <p>Most rating.</p>
                 <button>Book Now</button>
             </div>
         </div>
