--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
-    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <script src="https://kit.fontawesome.com/c19c712794.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
@@ -27,6 +26,15 @@
     </header>
     <div class = "text-box">
         <h1></h1>
+    </div>
+</div>
+<div id="Info">
+    <h1 id="Info">Begin your vacation easy and managable.</h1>
+    <p id="Obesnenie">,,Saitche" подпомага хората,като организира лесно ваканции и събирания със семейство, приятели, колеги.</p>
+    </div>
+
+    <div>
+       <button id="button"> See our services!</button> 
     </div>
 </body>
 </html>
