--- a/frontend/input.html
+++ b/frontend/input.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
@@ -25,14 +25,9 @@
             </ul>
         </nav>
     </header>
-
-<div id="Info">
-    <h1 id="Info">Begin your vacation easy and managable.</h1>
-    <p id="Obesnenie">,,Saitche"
-        helps people by easily organizing vacations and gatherings with family, friends, colleagues.</p>
-        <a href="input.html" class="hero-btn">Visit Us To Know More</a>
+<section class = "contact">
     
-    </div>
+</section>
 
 </body>
 </html>
