--- a/Backend/static/display.html
+++ b/Backend/static/display.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
@@ -16,11 +16,11 @@
         <nav>
             <h1 id = "title">Saitche</h1>
             <ul class="nav">
-                <li><a href="/home">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="#">Service</a></li>
-                <a href="/register"><i class="fa-solid fa-user"></i></a>
+                <a href="signup.html"><i class="fa-solid fa-user"></i></a>
             </ul>
         </nav>
     </header>
@@ -29,23 +29,23 @@
         <div class="hotel-container">
             <div class="hotel-card">
                 <img src="images/hotel1.jpg" alt="Hotel 1">
-                <h3>Grand Palace Hotel</h3>
-                <p>⭐⭐⭐⭐⭐</p>
-                <p>Luxury stay with an amazing view.</p>
+                <h3 id="hotelname1">Hotel name 1</h3>
+                <p id="rating1">Rating: </p>
+                <p>Closest to you.</p>
                 <button>Book Now</button>
             </div>
             <div class="hotel-card">
                 <img src="images/hotel2.jpg" alt="Hotel 2">
-                <h3>Sea Breeze Resort</h3>
-                <p>⭐⭐⭐⭐</p>
-                <p>Perfect for a relaxing getaway by the sea.</p>
+                <h3 id="hotelname2">Hotel name 2</h3>
+                <p id="rating2">Rating: </p>
+                <p>Cheapest.</p>
                 <button>Book Now</button>
             </div>
             <div class="hotel-card">
                 <img src="images/hotel3.jpg" alt="Hotel 3">
-                <h3>Mountain Escape Lodge</h3>
-                <p>⭐⭐⭐⭐</p>
-                <p>A cozy retreat in the heart of nature.</p>
+                <h3 id="hotelname3">Hotel name 3</h3>
+                <p id="rating3">Rating: </p>
+                <p>Most rating.</p>
                 <button>Book Now</button>
             </div>
         </div>
