--- a/Backend/static/index.html
+++ b/Backend/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
@@ -21,11 +21,18 @@
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="#">Service</a></li>
                 <a href="/register"><i class="fa-solid fa-user"></i></a>
-                <a href="/login"><i class="fa-solid fa-user"></i></a>
             </ul>
         </nav>
     </header>
-    <div class = "text-box">
+    <div id="Info">
+        <h1 id="Info">Begin your vacation easy and managable.</h1>
+        <p id="Obesnenie">,,Saitche"
+            helps people by easily organizing vacations and gatherings with family, friends, colleagues.</p>
+            <a href="input.html" class="hero-btn">Visit Us To Know More</a>
+        
+        <div class = "text-box">
+            <h1></h1>
+        </div>
     </div>
 </body>
 </html>
