Fixed the pages

--- a/Backend/static/signup.html
+++ b/Backend/static/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="static/css/login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
@@ -15,7 +15,7 @@
         <nav>
             <h1 id="title">Saitche</h1>
             <ul class="nav">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="/home">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="#">Service</a></li>
@@ -33,7 +33,7 @@
                     <h3>Create an account</h3>
                     <div class="login">
                         <p id="logtxt">Already have an account?</p>
-                        <a href="login.html">Log in</a>
+                        <a href="/login">Log in</a>
                     </div>
                     <div class="inputBox">
                         <input type="text" id="username" required>
