Added route to the search bar

--- a/Backend/static/index.html
+++ b/Backend/static/index.html
@@ -28,7 +28,7 @@
         <h1 id="Info">Begin your vacation easy and managable.</h1>
         <p id="Obesnenie">,,Saitche"
             helps people by easily organizing vacations and gatherings with family, friends, colleagues.</p>
-            <a href="input.html" class="hero-btn">Visit Us To Know More</a>
+            <a href="/search" class="hero-btn">Visit Us To Know More</a>
         
         <div class = "text-box">
             <h1></h1>
