--- a/Backend/static/signup.html
+++ b/Backend/static/signup.html
@@ -28,38 +28,42 @@
             <h2>Sign up</h2>
             <p>Here you can sign up or log in.</p>
         </div>
-            <div class="contactForm">
-                <form>
-                    <h3>Create an account</h3>
-                    <div class="login">
-                        <p id="logtxt">Already have an account?</p>
-                        <a href="/login">Log in</a>
-                    </div>
-                    <div class="inputBox">
-                        <input type="text" id="username" required>
-                        <span>Username</span>
-                    </div>
-                    <div class="inputBox">
-                        <input type="email" id="email" required>
-                        <span>Email</span>
-                    </div>
-                    <div class="inputBox">
-                        <input type="password" id="password" required>
-                        <span>Password</span>
-                    </div>
-                    <div class="inputBox">
-                        <input type="password" id="password2" required>
-                        <span>Confirm password</span>
-                    </div>
-                    <div class="inputBox">
-                        <input type="date"  required>
-                    </div>
-                    <div class="inputBox">
-                        <input type="submit" value="Sign up">
-                    </div>
-                </form>
-            </div>
+        <div class="contactForm">
+            <!-- Make sure the form's action is set to the correct endpoint and method is POST -->
+            <form method="POST" action="{{ url_for('register') }}">
+                {{ form.hidden_tag() }} <!-- This will render the CSRF token -->
+                <h3>Create an account</h3>
+                <div class="login">
+                    <p id="logtxt">Already have an account?</p>
+                    <a href="/login">Log in</a>
+                </div>
+                <div class="inputBox">
+                    <!-- Use Flask form's field names -->
+                    {{ form.username.label }}
+                    {{ form.username(class="form-control") }}
+                    <span>Username</span>
+                </div>
+                <div class="inputBox">
+                    {{ form.email.label }}
+                    {{ form.email(class="form-control") }}
+                    <span>Email</span>
+                </div>
+                <div class="inputBox">
+                    {{ form.password.label }}
+                    {{ form.password(class="form-control") }}
+                    <span>Password</span>
+                </div>
+                <div class="inputBox">
+                    {{ form.confirm_password.label }}
+                    {{ form.confirm_password(class="form-control") }}
+                    <span>Confirm password</span>
+                </div>
+                <div class="inputBox">
+                    {{ form.submit(class="submit-button") }}
+                </div>
+            </form>
         </div>
     </section>
 </body>
 </html>
+
