--- a/Backend/static/input.html
+++ b/Backend/static/input.html
@@ -25,9 +25,46 @@
             </ul>
         </nav>
     </header>
-<section class = "contact">
-    
-</section>
+    <section class="contact">
+        <div class="content">
+            <h2>Choose your vacation!</h2>
+            <p>Contact us if you are having any trouble</p>
+        </div>
 
+            <div class="mapForm">
+                <form>
+                    <div class="inputBox">
+                        <input type="text" id="destination" required>
+                        <span>Destination</span>
+                    </div>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3002792.594446323!2d22.89681389035086!3d42.69494030559465!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40a8fec1c85bf089%3A0xa01269bf4c10!2sBulgaria!5e0!3m2!1sen!2sbg!4v1742486122281!5m2!1sen!2sbg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+                    <div class="inputBox">
+                        <input type="text" id="Rating" required>
+                        <span>Rating</span>
+                    </div>
+                    <div class="inputBox">
+                        <input type="text" id="time" required>
+                        <span>Time of your stay</span>
+                    </div>
+                    <div class="inputBox">
+                        <input type="submit" value="Submit">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+    <script>
+        document.getElementById("destination").addEventListener("input", function () {
+            let destination = this.value.trim();
+            let mapLink = document.getElementById("mapLink");
+            if (destination) {
+                mapLink.href = `https://www.google.com/maps/search/?q=${encodeURIComponent(destination)}`;
+            } else {
+                mapLink.href = "#";
+            }
+        });
+    </script>
+    
 </body>
 </html>
