--- a/frontend/about.html
+++ b/frontend/about.html
@@ -3,9 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+    <script src="https://kit.fontawesome.com/c19c712794.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
+    <header class="header">
+
+        <nav>
+            <h1 id = "title">Saitche</h1>
+            <ul class="nav">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#">Service</a></li>
+                <a href="signup.html"><i class="fa-solid fa-user"></i></a>
+                
+            </ul>
+        </nav>
+    </header>
+    <div class = "text-box">
+        <h1 id="Aboutus">About us</h1>
+        <p id="text">We are a team of five friends who share a love for exploring new places, making plans, and helping others organize their vacations. From spontaneous weekend getaways to carefully planned holidays, we believe that vacation planning should be fun and stress-free. Our website was created to help people manage every aspect of their trip, from choosing destinations to tracking budgets and activities. With our combined skills and passion for travel, we’re dedicated to making vacation planning easier, so you can focus on what truly matters—enjoying your time away!
+
+            .</p>
+    </div>
+
     
+    <div class="team-container">
+        <div class="team-member">
+            <img src="ivcho.jpg" alt="Ivcho">
+            <h3>Ivcho</h3>
+            <p>Leader & Spokesperson</p>
+        </div>
+        <div class="team-member">
+            <img src="images/dancho.jpg" alt="Dancho">
+            <h3>Dancho</h3>
+            <p>Strategist & Problem Solver</p>
+        </div>
+        <div class="team-member">
+            <img src="ulian.jpg" alt="Ulian">
+            <h3>Ulian</h3>
+            <p>Creative Innovator</p>
+        </div>
+        <div class="team-member">
+            <img src="pecata.jpg" alt="Pecata">
+            <h3>Pecata</h3>
+            <p>Operations & Efficiency</p>
+        </div>
+        <div class="team-member">
+            <img src="deo.jpg" alt="Deo">
+            <h3>Deo</h3>
+            <p>Ambition & Vision</p>
+        </div>
+    </div>
 </body>
 </html>
